--- a/sasta-css.css
+++ b/sasta-css.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&family=Source+Sans+Pro:wght@200;300;400;600;900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -26,7 +28,7 @@ nav{
 }
 
 /* page title  */
-.title{
+nav .title{
     display: grid;
     place-content: center;
     word-wrap: break-word;
@@ -182,6 +184,133 @@ main{
 }
 
 
+
+ /*
+  ============= Playlist modal window ==============  
+*/
+.modal-window{
+    background-color: rgba(0,0,0,0.7);
+    position: absolute;
+    inset: 0;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-window .container{
+    height: 80vh;
+    width: 80vw;
+    /* max-width: ; */
+    background-color: white;
+    box-shadow: 0px 0px 5px white;
+    overflow-y: auto;
+}
+.modal-pop{
+    animation: pop-up 1s ease-in-out forwards;
+}
+@keyframes pop-up{
+    from{
+        transform: scale(0);
+    }
+    to{
+        transform: scale(1);
+    }
+}
+
+.modal-closed{
+    animation: fade .5s ease-in-out forwards;
+}
+@keyframes fade{
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+    }
+}
+
+  /* srollbar of Modal  */
+.container::-webkit-scrollbar{
+    width: 6px;
+    background-color: gainsboro;
+    border-radius: 5px;
+}
+.container::-webkit-scrollbar-thumb{
+    background-color: rgb(136, 132, 132, 0.8);
+    border-radius: 5px;
+}
+
+
+ /* ======= inside modal ===== */
+.search-section{
+    height: 15%;
+    display: grid;
+    place-content: center;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 2;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.221);
+}
+
+.search-field,
+.search-field:active{
+    outline: none;
+    border: none;
+    padding: 3px;
+    padding-left: 1.85rem;
+    border: 1px solid orange;
+    font-size: 1.2rem;
+    color: orangered;
+    font-family: 'Poppins', sans-serif;
+    background: url('src/img/search-icon.png') left no-repeat;
+    background-size: 30px;
+
+}
+.search-field::placeholder{
+    color: orangered
+}
+
+.music-list-section{
+    height: auto;
+    padding: 5px;
+}
+
+/* track info  */
+.track{
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    padding: 5px;
+    margin-bottom: 10px;
+    font-family: 'Poppins';
+    transform: scale(.95);
+}
+.track .title, .artist{
+    padding-left: 5px;
+}
+.track .title{
+    font-weight: 400;
+    color: dodgerblue;
+}
+.track .artist{
+    font-size: 15px;
+    color:rgb(48, 48, 48)
+}
+
+.track:hover{
+    transform: scale(.98);
+    transition: transform .3s;
+    cursor: pointer;
+    background-color: dodgerblue;
+}
+.track:hover .title{
+    color: white;
+}
+.track:hover .artist{
+    color: white;
+}
 
 
 
