--- a/sasta-css.css
+++ b/sasta-css.css
@@ -205,7 +205,7 @@ main{
     overflow-y: auto;
 }
 .modal-pop{
-    animation: pop-up 1s ease-in-out forwards;
+    animation: pop-up .5s ease-in-out forwards;
 }
 @keyframes pop-up{
     from{
@@ -327,32 +327,32 @@ main{
 footer{
     position: absolute;
     bottom: 0;
-    width: 72px;
-    height: 34px;
-    text-align: center;
-    border: 1px solid;
-    padding: 5px 0px;
-    background-color: var(--green);
+    width: auto;
+    height: auto;
+    padding: 0px 5px;
+    background-color: rgba(0, 0, 0, 0.873);
     color: var(--text-white);
     font-weight: 600;
     /* text-shadow: 0px 0px 2px rgba(0,0,0,1); */
     border-radius: 100vmax;
-    overflow: hidden;
-    transition: all .8s;
     margin: 5px;
+    user-select: none;
 }
 
 footer a{
     color: var(--text-white);
+    display: flex;
+    gap: .2rem;
+    text-decoration: none;
 }
 
-footer:hover,
-footer:active,
-footer:focus-within
-{
-    width: 100%;
-    margin: 0;
+footer img{
+    width: 32px;
+    border-radius: 100%;
+    filter: invert();
 }
 
-    /* devices who haven't hover */
-
+footer span{
+    display: flex;
+    align-items: center;
+}
