--- a/sasta-css.css
+++ b/sasta-css.css
@@ -252,10 +252,10 @@ main{
     background-color: white;
     z-index: 2;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.221);
+    border: 1px solid;
 }
 
-.search-field,
-.search-field:active{
+.search-field{
     outline: none;
     border: none;
     padding: 3px;
